# WxLinkAI

./: .gitignore  README.md  config.example.json  pyproject.toml  start.ps1
app/: agent_tools.py  config.py  main.py  models.py  providers.py  router.py  state.py
plugins/WxLinkAI_1.0.0/: info.prop  main.java  readme.md
web/: index.html
web/assets/: app.css  app.js
web/assets/fonts/: google-fonts.css
